--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "mqtt": "^5.14.1",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-colorful": "^5.6.1",
