--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.3",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.3",
+    "ts-pattern": "^5.9.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
