--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "immer": "^11.1.3",
+    "justgage": "^2.0.1",
     "mqtt": "^5.14.1",
     "nanoid": "^5.1.6",
     "next": "16.1.1",
@@ -24,6 +25,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.3",
     "ts-pattern": "^5.9.0",
+    "use-gauge": "^0.7.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
